--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="bg-gray-900 text-white font-sans antialiased min-h-screen">
   <div id="app"
-    class="w-full max-w-5xl mx-auto min-h-screen flex flex-col relative overflow-hidden bg-gray-900 shadow-2xl border-x border-gray-800">
+    class="w-full max-w-5xl mx-auto h-screen flex flex-col relative overflow-hidden bg-gray-900 shadow-2xl border-x border-gray-800">
     <!-- Content injected by JS -->
   </div>
   <script type="module" src="/src/main.js"></script>
