--- a/patch-notes.html
+++ b/patch-notes.html
@@ -51,7 +51,7 @@
                 <ul class="space-y-3 text-sm md:text-base text-gray-300">
                     <li class="flex items-start">
                         <span class="text-neonGreen mr-2 font-bold">✓</span>
-                        <span><strong>시즌 필터</strong>: 상단 탭에서 2024 / 2025 / Total(통산) 시즌을 자유롭게 넘나들며 데이터를 확인할 수
+                        <span><strong>시즌 필터</strong>: 상단 탭에서 2024 / 2025 / 2026 / Total(통산) 시즌을 자유롭게 넘나들며 데이터를 확인할 수
                             있습니다.</span>
                     </li>
                 </ul>
