--- a/patch-notes.html
+++ b/patch-notes.html
@@ -159,6 +159,20 @@
                                 변경됩니다.</li>
                         </ul>
                     </div>
+
+                    <div class="bg-gray-900 rounded-xl p-4 border border-gray-700">
+                        <h3 class="text-neonGreen font-bold mb-2">3. 득점/도움 연동 가이드 (비고란)</h3>
+                        <ul class="space-y-2 text-gray-400 text-sm">
+                            <li>득점자와 도움 제공자를 연결하려면, 두 선수의 <strong class="text-white">[비고]</strong> 란에 <span class="text-neonGreen">동일한 태그</span>(예: <code>G1</code>, <code>G2</code>...)를 입력하세요.</li>
+                            <li><strong class="text-white">예시 상황</strong>: A선수가 골을 넣고, B선수가 어시스트를 한 경우
+                                <ul class="list-disc list-inside ml-2 mt-1 text-gray-500">
+                                    <li><strong>A선수 (득점)</strong>: 비고란에 <code>G1</code> 입력</li>
+                                    <li><strong>B선수 (도움)</strong>: 비고란에 <code>G1</code> 입력</li>
+                                    <li>→ 대시보드 표기: <span class="text-gray-300">A선수 <span class="text-[10px] text-gray-500 font-normal">(도움: B선수)</span></span></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
