Fix mobile scrolling: prevent body scroll and lock viewport height

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
-<body class="bg-gray-900 text-white font-sans antialiased min-h-screen">
+<body
+  class="bg-gray-900 text-white font-sans antialiased fixed inset-0 h-[100dvh] w-full overflow-hidden overscroll-none">
   <div id="app"
-    class="w-full max-w-5xl mx-auto h-screen flex flex-col relative overflow-hidden bg-gray-900 shadow-2xl border-x border-gray-800">
+    class="w-full max-w-5xl mx-auto h-full flex flex-col relative overflow-hidden bg-gray-900 shadow-2xl border-x border-gray-800">
     <!-- Content injected by JS -->
   </div>
   <script type="module" src="/src/main.js"></script>
