feat: release v1.2 with clean sheets column and ui updates

--- a/patch-notes.html
+++ b/patch-notes.html
@@ -37,7 +37,7 @@
         <!-- Header -->
         <header class="mb-12 text-center">
             <h1 class="text-3xl md:text-4xl font-black text-white mb-4">TTFB WED <span
-                    class="text-neonGreen">v1.1</span> Update</h1>
+                    class="text-neonGreen">v1.2</span> Update</h1>
             <p class="text-gray-400">데이터 대시보드 정식 릴리즈 안내 (2026.01.13)</p>
         </header>
 
@@ -76,6 +76,15 @@
                         </div>
                     </li>
                 </ul>
+                <div class="mt-4 pt-4 border-t border-gray-700">
+                    <h3 class="text-neonGreen font-bold mb-2 text-sm md:text-base">v1.2 추가 사항</h3>
+                    <ul class="space-y-2 text-sm md:text-base text-gray-300">
+                        <li class="flex items-start">
+                            <span class="text-neonGreen mr-2 font-bold">•</span>
+                            <span><strong>무실점(Clean Sheets) 컬럼 추가</strong>: 기록실 테이블에서 무실점 기록을 확인하고 정렬할 수 있습니다.</span>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
 
@@ -125,7 +134,8 @@
                         <h3 class="text-neonGreen font-bold mb-2">2. 득점-도움 연결 (비고란)</h3>
                         <ul class="space-y-2 text-gray-400 text-sm">
                             <li>득점자와 도움 선수의 <strong class="text-white">[기록원장] 시트 [비고]</strong> 란에 같은 태그(예:
-                                <code>G1</code>)를 입력하면 자동으로 연결됩니다.</li>
+                                <code>G1</code>)를 입력하면 자동으로 연결됩니다.
+                            </li>
                         </ul>
                     </div>
                 </div>
