feat: add position display and refine assist visibility (v1.2.1)

--- a/patch-notes.html
+++ b/patch-notes.html
@@ -37,51 +37,54 @@
         <!-- Header -->
         <header class="mb-12 text-center">
             <h1 class="text-3xl md:text-4xl font-black text-white mb-4">TTFB WED <span
-                    class="text-neonGreen">v1.2</span> Update</h1>
-            <p class="text-gray-400">데이터 대시보드 정식 릴리즈 안내 (2026.01.13)</p>
+                    class="text-neonGreen">v1.2.1</span> Update</h1>
+            <p class="text-gray-400">데이터 대시보드 업데이트 (2026.01.17)</p>
         </header>
 
-        <!-- Section 1: Records Room Updates -->
+        <!-- Section 1: Lineup Improvements -->
         <section class="mb-12 animate-fade-in-up">
             <div class="bg-gray-800 rounded-3xl p-6 md:p-8 border border-gray-700 shadow-lg">
                 <div class="flex items-center mb-6">
-                    <span class="text-2xl mr-3">📊</span>
-                    <h2 class="text-xl font-bold text-white">기록실 기능 강화 (Records Upgrade)</h2>
+                    <span class="text-2xl mr-3">📋</span>
+                    <h2 class="text-xl font-bold text-white">명단 표시 개선 (Lineup Improvements)</h2>
                 </div>
                 <ul class="space-y-4 text-sm md:text-base text-gray-300">
                     <li class="flex items-start">
                         <span class="text-neonGreen mr-2 font-bold">✓</span>
                         <div>
-                            <strong class="text-white">무실점(Clean Sheets) 컬럼 추가</strong>
-                            <p class="text-gray-400 mt-1">기록실의 선수 개인 기록 표에 <strong>'무실점'</strong> 항목이 추가되었습니다. 이제 누가 가장
-                                많은 클린시트를 기록했는지 오름차순/내림차순으로 정렬하여 확인해보세요.</p>
+                            <strong class="text-white">포지션 표시 (Position Badges)</strong>
+                            <p class="text-gray-400 mt-1">출전 명단에서 각 선수의 <strong>포지션(FW, MF, DF, GK)</strong>을 확인할 수
+                                있습니다.</p>
                         </div>
                     </li>
                     <li class="flex items-start">
                         <span class="text-neonGreen mr-2 font-bold">✓</span>
                         <div>
-                            <strong class="text-white">무실점 상세 기록 개선</strong>
-                            <p class="text-gray-400 mt-1">무실점(Top 5) 카드를 클릭하면, 기존처럼 모든 경기가 나오지 않고 <strong>실점이 '0'인 경기만
-                                    정확히 필터링</strong>되어 표시됩니다.</p>
+                            <strong class="text-white">도움 기록 가시성 개선 (Assist Visibility)</strong>
+                            <p class="text-gray-400 mt-1">득점자 옆에 표시되는 도움 기록(Assister)이 <strong>더 밝고 선명하게</strong> 표시되어
+                                쉽게 확인할 수 있습니다.</p>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
 
-        <!-- Section 2: UI/UX Improvements -->
+        <!-- Section 2: Records Room Updates (v1.2) -->
         <section class="mb-12">
             <div class="bg-gray-800 rounded-3xl p-6 md:p-8 border border-gray-700 shadow-lg">
                 <div class="flex items-center mb-6">
-                    <span class="text-2xl mr-3">🎨</span>
-                    <h2 class="text-xl font-bold text-white">디자인 개선 (UI Refinements)</h2>
+                    <span class="text-2xl mr-3">📊</span>
+                    <h2 class="text-xl font-bold text-white">기록실 기능 강화 (Records Upgrade - v1.2)</h2>
                 </div>
-                <div class="space-y-4 text-sm md:text-base text-gray-300">
-                    <ul class="space-y-2 list-disc list-inside ml-2 text-gray-400">
-                        <li><strong class="text-gray-200">라벨 통일</strong>: 무실점 카드의 제목을 기존 'Clean Sheets'에서 다른 카드와 동일하게
-                            <strong>'Top 5'</strong>로 변경하여 통일감을 주었습니다.</li>
-                    </ul>
-                </div>
+                <ul class="space-y-4 text-sm md:text-base text-gray-300">
+                    <li class="flex items-start">
+                        <span class="text-neonGreen mr-2 font-bold">✓</span>
+                        <div>
+                            <strong class="text-white">무실점(Clean Sheets) 컬럼 추가</strong>
+                            <p class="text-gray-400 mt-1">기록실의 선수 개인 기록 표에 <strong>'무실점'</strong> 항목이 추가되었습니다.</p>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
 
